--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "hetlage",
   "version": "0.1.0",
   "private": true,
-  "homepage": "/build",
   "basename": "/",
   "dependencies": {
     "@babel/core": "7.4.3",
@@ -76,7 +75,7 @@
     "semver": "6.0.0",
     "slick-carousel": "^1.8.1",
     "style-loader": "0.23.1",
-    "terser-webpack-plugin": "1.2.3",
+    "terser-webpack-plugin": "^3.0.1",
     "ts-pnp": "1.1.2",
     "url-loader": "1.1.2",
     "webpack": "4.29.6",
