Deploy Config Changes

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -1,3 +1,9 @@
 {
-	"hosting": {}
+    "hosting": {
+        "amplifyhosting": {
+            "service": "amplifyhosting",
+            "providerPlugin": "awscloudformation",
+            "type": "manual"
+        }
+    }
 }
