validate and style contact form

--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "camelcase": "^5.2.0",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
     "css-loader": "2.1.1",
+    "dotenv": "^8.2.0",
     "dotenv-expand": "4.2.0",
+    "emailjs-com": "^2.4.1",
     "eslint": "^5.16.0",
     "eslint-config-react-app": "^4.0.1",
     "eslint-loader": "2.1.2",
@@ -27,6 +29,7 @@
     "eslint-plugin-react": "7.12.4",
     "eslint-plugin-react-hooks": "^1.7.0",
     "file-loader": "3.0.1",
+    "formik": "^2.1.4",
     "fs-extra": "7.0.1",
     "google-map-react": "^1.1.7",
     "html-webpack-plugin": "4.0.0-beta.5",
@@ -67,6 +70,7 @@
     "react-tabs": "^3.1.0",
     "react-text-loop": "^2.3.0",
     "react-tilt": "^0.1.4",
+    "react-toastify": "^6.0.5",
     "react-video-tag": "0.0.10",
     "react-visibility-sensor": "^5.1.1",
     "resolve": "1.10.0",
@@ -80,7 +84,8 @@
     "webpack": "4.29.6",
     "webpack-dev-server": "3.2.1",
     "webpack-manifest-plugin": "2.0.4",
-    "workbox-webpack-plugin": "4.2.0"
+    "workbox-webpack-plugin": "4.2.0",
+    "yup": "^0.29.0"
   },
   "scripts": {
     "start": "node scripts/start.js",
