--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "react-scroll-up": "^1.3.3",
     "react-scrollspy": "^3.4.2",
     "react-slick": "^0.24.0",
+    "react-syntax-highlighter": "^13.3.1",
     "react-tabs": "^3.1.0",
     "react-text-loop": "^2.3.0",
     "react-tilt": "^0.1.4",
