Updated particles, landing image, and added react-snap

--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "react-scroll-up": "^1.3.3",
     "react-scrollspy": "^3.4.2",
     "react-slick": "^0.24.0",
+    "react-snap": "^1.23.0",
     "react-syntax-highlighter": "^13.3.1",
     "react-tabs": "^3.1.0",
     "react-text-loop": "^2.3.0",
@@ -92,7 +93,8 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js"
+    "test": "node scripts/test.js",
+    "postbuild": "react-snap"
   },
   "eslintConfig": {
     "extends": "react-app"
